force-app/main/default/objects/Enqix_Import__c/Enqix_Import__c.object-meta.xml
<CustomObject>
    <description>Serves as a placeholder for Enquix data imports.</description>
    <label>Enqix Import</label>
    <nameField>
        <displayFormat>EI-{0000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enqix Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>