force-app/main/default/objects/Enqix_Import__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Log data for the operation, if number of statements falls out of Length, log attachment is generated and attached to the record.</description>
    <inlineHelpText>Log data for the operation, if number of statements falls out of Length, log attachment is generated and attached to the record.</inlineHelpText>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>