force-app/main/default/objects/Enqix_Import__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Import.</description>
    <inlineHelpText>Type of Import.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts/Locations</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>